@startuml StoryboarGenerator-AO

class User{
    id
    name
    lastName
    email
    password
    phone
    age
    rol
    ---
    login()
    register()
    recoverPassword()
    accessAProject()
    watchOtherProfiles()
    
}

class Project{
    id
    producer
    startDate
    updateDate
    finishDate
    tittle
    description
    ---
    createProject()
    assignDirectorRole()
    generateAccessPIN()
    updateAccessPIN()
    manageRoles()
    editProjectInfo()
    deleteProject()
    deleteMembers()
    notifyChanges()
    watchLastDate()
    DownloadPDF()
    defineNumbreOfPages()
}
class Scene{
    id
    number
    duration
    place
    dayTime
    space
    projectId
    ---
    createScene()
    editEsceneInfo()
    delteEscenes()
    watchAddedEscenes()
}
class Plane{
    id
    number
    duration
    argument
    shot
    framing
    move
    projectId
    sceneId
    ---
    createPlane()
    editPlaneInfo()
    deletePlane()
    watchAddedPlanes()
    addImageFromCamera()
    addImageFromStorage()
    
}

User--Project
Project*--Plane
Project*--Scene
User--Plane
User--Scene

@enduml